# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  models.py  utils.py  validators.py
page_analyzer/repositories/: check_repository.py  url_repository.py
page_analyzer/templates/: index.html  layout.html
page_analyzer/templates/errors/: 404.html
page_analyzer/templates/urls/: index.html  show.html
